Bug 1206708 - Make all WebRTC ImageContainers async. r=jesup,nical

This avoids expensive copying when compositing these frames on e10s.

MozReview-Commit-ID: LIeUhh6rjCf