media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp
@@ -2142,7 +2142,8 @@ public:
       monitor_("Video PipelineListener")
   {
 #if !defined(MOZILLA_EXTERNAL_LINKAGE)
-    image_container_ = LayerManager::CreateImageContainer();
+    image_container_ =
+      LayerManager::CreateImageContainer(ImageContainer::ASYNCHRONOUS);
 #endif
   }
 
